# faith

./: README.md
FOE methods MATLAB/: FAITH_FOE.m  NESW_FOE.m  VecIntersections_FOE.m  halfplanes_FOE.m
ROS/dvs_of/: CMakeLists.txt  dvs_of_nodelet.xml  package.xml
ROS/dvs_of/include/dvs_of/: calibDVS240.h  calibration.h  of_server.h  of_server_nodelet.h  planefitting.h  settings.h  timer.h  utils.h
ROS/dvs_of/launch/: of_server.launch
ROS/dvs_of/msg/: FlowPacketMsg.msg  FlowPacketMsgArray.msg
ROS/dvs_of/src/: calibration.cpp  of_server.cpp  of_server_node.cpp  of_server_nodelet.cpp  planefitting.cpp
ROS/foe_estimator/: CMakeLists.txt  package.xml
ROS/foe_estimator/include/: det.h  eml_rand_mt19937ar_stateful.h  estimateFoECPP.h  estimateFoECPP_data.h  estimateFoECPP_initialize.h  estimateFoECPP_terminate.h  estimateFoECPP_types.h  find.h  minOrMax.h  mldivide.h  rand.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  sign.h
ROS/foe_estimator/include/foe_estimator/: foe_estimator.h
ROS/foe_estimator/src/: det.cpp  eml_rand_mt19937ar_stateful.cpp  estimateFoECPP.cpp  estimateFoECPP_data.cpp  estimateFoECPP_initialize.cpp  estimateFoECPP_terminate.cpp  find.cpp  foe_estimator.cpp  minOrMax.cpp  mldivide.cpp  rand.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  sign.cpp
ROS/object_detection/: CMakeLists.txt  package.xml
ROS/object_detection/include/: avoidanceCommand.h  avoidanceCommand_data.h  avoidanceCommand_initialize.h  avoidanceCommand_terminate.h  avoidanceCommand_types.h  controller.hpp  median.h  minOrMax.h  postEstimateClustersCPP.h  postEstimateClustersCPP_data.h  postEstimateClustersCPP_initialize.h  postEstimateClustersCPP_terminate.h  postEstimateClustersCPP_types.h  prepEstimateClustersCPP.h  prepEstimateClustersCPP_data.h  prepEstimateClustersCPP_initialize.h  prepEstimateClustersCPP_terminate.h  prepEstimateClustersCPP_types.h  quickselect.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  std.h
ROS/object_detection/include/object_detection/: object_detection.h
ROS/object_detection/launch/: obstacle_avoidance_offline.launch  obstacle_avoidance_online.launch
ROS/object_detection/src/: avoidanceCommand.cpp  avoidanceCommand_data.cpp  avoidanceCommand_initialize.cpp  avoidanceCommand_terminate.cpp  controller.cpp  kdtree.cpp  median.cpp  minOrMax.cpp  object_detection.cpp  postEstimateClustersCPP.cpp  postEstimateClustersCPP_data.cpp  postEstimateClustersCPP_initialize.cpp  postEstimateClustersCPP_terminate.cpp  prepEstimateClustersCPP.cpp  prepEstimateClustersCPP_data.cpp  prepEstimateClustersCPP_initialize.cpp  prepEstimateClustersCPP_terminate.cpp  quickselect.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  std.cpp
